various change + customer template and email check

--- a/rdbms/main/templates/main/indexpage.html
+++ b/rdbms/main/templates/main/indexpage.html
@@ -12,7 +12,7 @@ Things u can do |!!|
         <a href = "{% url 'booking_id_search' %}">booking id search</a>
     </li>
     <li>
-        customer form and registration
+        <a href = "{% url 'reg' %}">customer form and registration</a>
     </li>
 </ul>
 </div>
